src/test/deca/syntax/invalid/Commentaires.deca
// Description:
//    test d'un commantaire sans fin
//
// Resultats:
//    Une erreur de compilation
//
// Historique:
//    cree le 04/01/2023

{
/*
}
